--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 </head>
 
-<body background="imagen fondo 4.jpg" style="background-repeat:repeat; position:center center; background-size:cover; background-attachment:fixed; ">
+<body background="imagen fondo 4.jpg" style="background-repeat:repeat; position:center center; background-size:auto; background-attachment:fixed; ">
 
 <script>
 function cambiarTrack(track) {
